client/src/styles/posts.scss
.posts{
  margin: 0 auto;
  width: 80%;
  display: flex;
  justify-content: center;

  .left-content{
    width: 500px;
    min-width: 500px;

    .post{
      border: 1px solid transparent;
      margin: 10px 0;
      background-color: $em-bg-gray-medium;
      border-radius: 5px;

      &.author-post{
        border: 2px solid $em-border-gray-light;
        border-radius: 15px;
        background: linear-gradient(to bottom, $em-bg-gray-light 0px, $em-bg-gray-medium 160px);
      }

      .post-body{
        padding: 25px 25px 0 25px;

        .author{
          font-size: 10px;
          display: inline-block;
          border: 1px solid white;
          padding: 0 5px;
          border-radius: 5px;
          color: $em-text-gray-dark;
          background: $em-bg-gray-verylight;
          margin-bottom: 10px;
        }

        .post-header{
          display: flex;
          justify-content: space-between;

          .post-details{
            display: flex;
            flex-flow: column;
            align-items: flex-start;

            .detail{
              font-size: 10px;
              margin: 1px 0;
              color: $em-btn-text;
              font-weight: bold;
              border-radius: 2px;
            }

            .post-date{
              color: $em-text-gray-light;
              //background-color: #fff;
              padding: 0;
              font-size: 11px;
            }
          }

          .post-action{
            font-weight: bold;

            .dropdown{
              cursor: pointer;

              .dropdown-menu {
                max-width: 200px;
                -moz-box-shadow: 2px 2px 5px 2px $em-bg-gray-dark;
                -webkit-box-shadow: 2px 2px 5px 2px $em-bg-gray-dark;
                box-shadow: 2px 2px 5px 2px $em-bg-gray-dark;
                outline: none;

                .menu-item {
                  font-size: 11px;
                  white-space: nowrap;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  color: $em-bg-gray-dark;
                  cursor: pointer;
                  line-height: 20px;
                  font-weight: bold;

                  &:hover{
                    background-color: $em-bg-gray-verylight;
                  }
                  &:focus{
                    outline: none;
                  }
                  &:active{
                    background-color: $em-bg-gray-verylight;
                  }
                  .item-text{
                    padding: 0 10px;
                  }
                  i{
                    zoom: 1.2;
                    vertical-align: middle;
                  }
                }
                &::before{
                  content: '';
                  position: absolute;
                  right: 1%;
                  top: -4px;
                  width: 0;
                  height: 0;
                  border-left: 5px solid transparent;  /* left arrow slant */
                  border-right: 5px solid transparent; /* right arrow slant */
                  border-bottom: 5px solid #fff; /* bottom, add background color here */
                  font-size: 0;
                  line-height: 0;
                }
              }
            }
          }
        }
        .created-date{
          font-size: 13px;
        }

        .content{
          pre{
            font-size: 13px;
            margin: 25px 0;
            word-wrap: break-word;
            white-space:pre-wrap;
            overflow: hidden;
          }
        }
        .post-meta{
          padding: 20px 0;
          border-top: 1px solid $em-border-gray;
          border-bottom: 1px solid $em-border-gray;
          display: flex;
          align-items: center;
          cursor: default;
          font-size: 12px;

          .likes{
            flex: 1;
            display: flex;
            //cursor: pointer;
            .logo,.count {
              padding: 0 5px;
            }
            .logo{
              zoom: 1.2;
            }
          }
          .interests{
            flex: 1;
            display: flex;
            cursor: pointer;
            .logo,.count {
              padding: 0 5px;
            }
            .logo{
              zoom: 1.2;
            }
          }
          //.liked{
          //  text-align: center;
          //  flex: 1 0 0;
          //}
          .comments{
            flex: 1;
            display: flex;
            .logo,.count {
              padding: 0 5px;
            }
            .logo{
              zoom: 1.2;
            }
          }
          i{
            zoom: 1.2;
            vertical-align: middle;
          }
        }
        .post-controls{
          display: flex;
          align-items: stretch;
          border-bottom: none;

          .post-control{
            margin: 5px;
            flex: 1 0 0;

            &:first-child{
              margin-left: 0;
            }
            &:last-child{
              margin-right: 0;
            }

            button{
              color: $em-btn-text;
              height: 30px;
              width: 100%;
              border-radius: 2px;
              -moz-outline: none;
              -webkit-outline: none;
              outline: none;
              cursor: pointer;
              font-size: 13px;
              font-weight: bold;

              &:active{
                opacity: 0.8;
              }
              &:hover{
                //background-color: $em-bg-gray-dark;
              }
              &:focus{
                text-decoration: none;
                box-shadow: none;
              }
            }
          }
        }
      }
    }

    .empty-message{
      font-size: 28px;
      font-weight: bold;
      text-align: center;
      padding: 30px 0;
    }
  }
  .right-content{
    width: 285px;
    min-width: 285px;
    margin-left: 10px;
    padding: 10px 20px;

    .panel{
      margin-bottom: 5px;
      //border: 1px solid $em-border-gray;
      display: flex;
      flex-flow: column;

      .date-filter,
      .quick-filter{
        margin-bottom: 5px;
        border: 1px solid $em-border-gray;
      }
      button.today-filter,
      button.clear-quick-filter{
        align-self: flex-end;
        margin: 10px 0;
        background-color: $em-alt-btn-bg;
        color: $em-alt-btn-text;
        -moz-outline: none;
        -webkit-outline: none;
        outline: none;
        border: 1px solid $em-border-gray;
        font-size: 14px;
        width: auto;
        cursor: pointer;
        border-radius: 3px;
        font-weight: 600;
        min-height: 36px;
        padding: 0 16px;
        vertical-align: middle;

        &:active{
          background: $em-alt-btn-bg-active;
          color: $em-alt-btn-text-active;
        }
      }

      .quick-filter {
        display: flex;
        justify-content: flex-start;
        align-items: stretch;
        flex-flow: column nowrap;
        background-color: $em-bg-gray-medium;

        .filter-item{
          height: 28px;
          border-bottom: 1px solid $em-border-gray;
          line-height: 28px;
          padding: 0 0 0 10px;
          cursor: pointer;
          font-size: 13px;

          &.selected{
            border-left: 5px solid;
            padding: 0 0 0 5px;
            color: $em-text-blue;
          }
          &:last-child{
            border-bottom: none;
          }
        }
      }

      .more-filter{
        background-color: #fff;
      }
    }
    .back-to-top{
      text-decoration: none;
      color: #fff;
      position: fixed;
      z-index: 19;
      width: 50px;
      height: 50px;
      display: flex;
      fill: #fff;
      stroke: inherit;
      transition: all .3s ease;
      bottom: 50px;
      cursor: pointer;
      box-shadow: 0 0 10px 0 rgba(63, 66, 87, 0.4);
      border-radius: 100%;
      background-color: #ff5e3a;

      &:hover{
        opacity:0.8;
      }

      i{
        margin: auto;
        zoom: 1.5;
      }
    }
  }
}

